[REFACTOR] fix code smell and enhanced implementation